--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 :root{
   font-size: 18px;
-  font-family: ;
 }
 *{
   box-sizing: border-box;
@@ -30,10 +29,11 @@ ul{
 }
 /* ----------header---------- */
 .logo{
-  font-size: 1.6em;
+  font-size: 2.5em;
+  font-family: 'Square Peg', cursive;;
 }
 .header{
-  padding: 0.5em 1em;
+  padding: 1.5em 1em;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -54,14 +54,9 @@ ul{
   display: inline-block;
   font-family: sans-serif;
 }
-.main-container{
-  margin: 0 auto;
-  background-color: pink;
-}
-
 .footer{
   padding: 1em;
-  /* margin-top: auto; */
+  margin-top: auto;
   background-color:#262626;
   color: white;
   text-align: center;
