--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,8 @@ ul{
   font-family: 'Square Peg', cursive;;
 }
 .header{
-  padding: 1.5em 1em;
+  padding: 1.5em 3em;
+  min-width: 440px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -42,8 +43,8 @@ ul{
   color: white;
 }
 .btn{
-  padding: 0.7em 1em;
-  font-size: 0.7em;
+  padding: 1em 1.5em;
+  font-size: 0.8em;
   border: 1px solid white;
   border-radius: 2px;
 }
@@ -54,6 +55,10 @@ ul{
   display: inline-block;
   font-family: sans-serif;
 }
+.nav-list-item+.nav-list-item{
+  margin-left: 1em;
+}
+/* ----------footer---------- */
 .footer{
   padding: 1em;
   margin-top: auto;
